--- a/impl/src/main/resources/outsourcing-invoice/application.yml
+++ b/impl/src/main/resources/outsourcing-invoice/application.yml
@@ -11,10 +11,10 @@ spring:
     basename: outsourcing-invoice-messages
     encoding: UTF-8
   datasource:
-    url: ${ORDER_DATASOURCE_URL:${DATASOURCE_URL:jdbc:p6spy:hsqldb:mem:outsourcing-invoice}}
-    driver-class-name: ${ORDER_DATASOURCE_DRIVER_CLASS_NAME:${DATASOURCE_DRIVER_CLASS_NAME:com.p6spy.engine.spy.P6SpyDriver}}
-    username: ${ORDER_DATASOURCE_USERNAME:${DATASOURCE_USERNAME:as}}
-    password: ${ORDER_DATASOURCE_PASSWORD:${DATASOURCE_PASSWORD:null}}
+    url: ${OUTSOURCING_INVOICE_DATASOURCE_URL:${DATASOURCE_URL:jdbc:p6spy:hsqldb:mem:outsourcing-invoice}}
+    driver-class-name: ${OUTSOURCING_INVOICE_DATASOURCE_DRIVER_CLASS_NAME:${DATASOURCE_DRIVER_CLASS_NAME:com.p6spy.engine.spy.P6SpyDriver}}
+    username: ${OUTSOURCING_INVOICE_DATASOURCE_USERNAME:${DATASOURCE_USERNAME:as}}
+    password: ${OUTSOURCING_INVOICE_DATASOURCE_PASSWORD:${DATASOURCE_PASSWORD:null}}
     hikari:
       maximum-pool-size: 4
   jpa:
