--- a/impl/src/main/resources/outsourcing-invoice/application.yml
+++ b/impl/src/main/resources/outsourcing-invoice/application.yml
@@ -1,22 +1,25 @@
-banner:
-  location: classpath:outsourcing-invoice/banner.txt
-
 spring:
+  jmx:
+    default-domain: outsourcing-invoice
+  banner:
+    location: classpath:outsourcing-invoice/banner.txt
   application:
     name: pico-outsourcing-invoice
   session:
     store-type: NONE
   messages:
-    cache-seconds: 60
     basename: outsourcing-invoice-messages
     encoding: UTF-8
   datasource:
+    name: outsourcing-invoice-datasource
     url: ${OUTSOURCING_INVOICE_DATASOURCE_URL:${DATASOURCE_URL:jdbc:p6spy:hsqldb:mem:outsourcing-invoice}}
     driver-class-name: ${OUTSOURCING_INVOICE_DATASOURCE_DRIVER_CLASS_NAME:${DATASOURCE_DRIVER_CLASS_NAME:com.p6spy.engine.spy.P6SpyDriver}}
     username: ${OUTSOURCING_INVOICE_DATASOURCE_USERNAME:${DATASOURCE_USERNAME:as}}
     password: ${OUTSOURCING_INVOICE_DATASOURCE_PASSWORD:${DATASOURCE_PASSWORD:null}}
     hikari:
       maximum-pool-size: 4
+  flyway:
+    enabled: false
   jpa:
     database: HSQL
     hibernate:
@@ -82,6 +85,3 @@ logging:
   level:
     org:
       springframework: INFO
-
-flyway:
-  enabled: false
