--- a/test/build.gradle
+++ b/test/build.gradle
@@ -14,28 +14,30 @@ dependencies {
 
   compile project(':impl')
 
-  testCompile("com.github.kkojaeh.pico-erp-user:test:${userVersion}")
+  compile("com.github.kkojaeh.pico-erp-shared:test:${sharedVersion}")
 
-  testCompile("com.github.kkojaeh.pico-erp-item:test:${itemVersion}")
+  testRuntime("com.github.kkojaeh.pico-erp-user:test:${userVersion}")
 
-  testCompile("com.github.kkojaeh.pico-erp-project:test:${projectVersion}")
+  testRuntime("com.github.kkojaeh.pico-erp-item:test:${itemVersion}")
 
-  testCompile("com.github.kkojaeh.pico-erp-company:test:${companyVersion}")
+  testRuntime("com.github.kkojaeh.pico-erp-project:test:${projectVersion}")
 
-  testCompile("com.github.kkojaeh.pico-erp-outsourcing-order:test:${outsourcingOrderVersion}")
+  testRuntime("com.github.kkojaeh.pico-erp-company:test:${companyVersion}")
 
-  testCompile("com.github.kkojaeh.pico-erp-outsourcing-request:test:${outsourcingRequestVersion}")
+  testRuntime("com.github.kkojaeh.pico-erp-outsourcing-order:test:${outsourcingOrderVersion}")
 
-  testCompile("com.github.kkojaeh.pico-erp-process:test:${processVersion}")
+  testRuntime("com.github.kkojaeh.pico-erp-outsourcing-request:test:${outsourcingRequestVersion}")
 
-  testCompile("com.github.kkojaeh.pico-erp-invoice:test:${invoiceVersion}")
+  testRuntime("com.github.kkojaeh.pico-erp-process:test:${processVersion}")
 
-  testCompile("com.github.kkojaeh.pico-erp-e-document:test:${documentVersion}")
+  testRuntime("com.github.kkojaeh.pico-erp-invoice:test:${invoiceVersion}")
 
-  testCompile("com.github.kkojaeh.pico-erp-delivery:test:${deliveryVersion}")
+  testRuntime("com.github.kkojaeh.pico-erp-e-document:test:${documentVersion}")
 
-  testCompile("com.github.kkojaeh.pico-erp-warehouse:test:${warehouseVersion}")
+  testRuntime("com.github.kkojaeh.pico-erp-delivery:test:${deliveryVersion}")
 
-  testCompile("com.github.kkojaeh.pico-erp-bom:test:${bomVersion}")
+  testRuntime("com.github.kkojaeh.pico-erp-warehouse:test:${warehouseVersion}")
+
+  testRuntime("com.github.kkojaeh.pico-erp-bom:test:${bomVersion}")
 
 }
